# release2gitee

./: Cargo.toml  README.md
.github/workflows/: release.yml
http/: release2gitee.http
http/response_data/: 01_github_releases.json  02_github_release_detail.json  03_gitee_releases.json  04_gitee_release_create.json  05_gitee_release_upload.json
src/: api.rs  http.rs  lib.rs  main.rs  model.rs  sync.rs
