[package]
name = "release2gitee"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli", "multipart"] }
anyhow = "1"
log = "0.4.29"
indicatif = { version = "0.17", features = ["improved_unicode"] }