[package]
name = "release2gitee"
version = "0.9.3"
edition = "2024"

authors = ["he_pengju@163.com"]
license = "MIT OR Apache-2.0"
description = "sync github releases to gitee releases"
readme = "README.md"
homepage = "https://github.com/hepengju/release2gitee"
repository = "https://github.com/hepengju/release2gitee"
keywords = ["sync", "github", "release", "gitee"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli", "multipart"] }
anyhow = "1"
log = "0.4.29"
indicatif = { version = "0.17", features = ["improved_unicode"] }
clap-verbosity-flag = "3.0.4"
